fix headlines overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ main {
   align-items: center;
 
   float: right;
-  font-size: 15px;
+  font-size: 13px;
 }
 .current_price {
   background-color: rgba(0, 0, 0, 0.2);
@@ -248,6 +248,7 @@ main {
 }
 .subtitle {
   text-decoration: none;
+  font-size: 15px;
 }
 
 .market_info {
@@ -260,14 +261,17 @@ main {
 }
 
 .headlines {
+  width: 100%;
   white-space: nowrap;
   color: rgb(175, 169, 169);
+  overflow-x: hidden;
+  display: inline-block;
   animation: horizontal_slide 55s linear infinite;
 }
 
 .headlines span {
-  /* animation-delay: 5s; */
   overflow: hidden;
+  /* animation-delay: 5s; */
 }
 @keyframes horizontal_slide {
   0% {
